--- a/songs/index.html
+++ b/songs/index.html
@@ -136,7 +136,7 @@ img {
 	
 <p class="header">–––– 2021 ––––</p>
 
-<p class="title" title="test test test">eat my shorts</p>
+<p class="title" title="test test test">test test test</p>
 	
 <p class="title"><a href="Improv 2021.03.30 🗣.mp3" target="_blank">"Improv March 30, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.27.mp3" target="_blank">"Improv March 27, 2021.mp3"</a></p>
@@ -146,7 +146,7 @@ img {
 <p class="title" title="March 17, 2021"><a href="Quixote in Desert II.mp3" target="_blank">"Quixote in Desert II.mp3"</a></p>
 <p class="title"><a href="Loop 2021.03.16.mp3" target="_blank">"Loop March 16, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.15.mp3" target="_blank">"Improv March 15, 2021.mp3"</a></p>
-<p class="title" title="March 13, 2021"><a href="Carolina 2021.03.13.mp3" target="_blank">"Variation on a Theme by JT.mp3"</a> (<a href="https://www.youtube.com/watch?v=67343pHUW5o">▶️</a>)</p>
+<p class="title" title="March 13, 2021"><a href="Carolina 2021.03.13.mp3" target="_blank">"Variation on a Theme by JT.mp3"</a> (<a href="https://www.youtube.com/watch?v=67343pHUW5o" target="_blank">▶️</a>)</p>
 <p class="title"><a href="Improv 2021.03.10.mp3" target="_blank">"Improv March 10, 2021 #1.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.10 2.mp3" target="_blank">"Improv March 10, 2021 #2.mp3"</a></p>
 ​​<p class="title"><a href="Improv 2021.03.07.mp3" target="_blank">"Improv March 7, 2021.mp3"</a></p>
@@ -165,7 +165,7 @@ img {
 <p class="title"><a href="Improv 2021.01.21.mp3" target="_blank">"Improv January 21, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.01.15.mp3" target="_blank">"Improv January 15, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.01.14.mp3" target="_blank">"Improv January 14, 2021.mp3"</a></p>
-<p class="title" title="January 7, 2021"><a href="Song for the United States of America.mp3" target="_blank">"Song for the United States of America.mp3"</a> (<a href="https://www.instagram.com/p/CJwiI3JMrTV/" target="_blank">🖼️
+<p class="title" title="January 7, 2021"><a href="Song for the United States of America.mp3" target="_blank">"Song for the United States of America.mp3"</a> (<a href="https://www.instagram.com/p/CJwiI3JMrTV/" target="_blank">📝
 </a>)</p>
 <p class="title"><a href="Improv 2021.01.08.mp3" target="_blank">"Improv January 5, 2021.mp3"</a></p>
 
@@ -184,7 +184,7 @@ img {
 <p class="title"><a href="Improv 2020.10.21.mp3" target="_blank">"Improv October 21, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.10.16.mp3" target="_blank">"Improv October 16, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.10.14.mp3" target="_blank">"Improv October 14, 2020.mp3"</a></p>
-<p class="title"><a href="Improv 2020.10.03 weberwav.mp3" target="_blank">"Improv , 2020.mp3"</a> (<a href="https://raw.githubusercontent.com/tomspage/tomspage.github.io/master/images/weberwav.jpg">🖼️</a>)</p>
+<p class="title"><a href="Improv 2020.10.03 weberwav.mp3" target="_blank">"Improv , 2020.mp3"</a> (<a href="https://raw.githubusercontent.com/tomspage/tomspage.github.io/master/images/weberwav.jpg" target="_blank">🖼️</a>)</p>
 <p class="title"><a href="Improv 2020.09.24.mp3" target="_blank">"Improv September 24, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.09.21.mp3" target="_blank">"Improv September 21, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.09.11.mp3" target="_blank">"Improv September 11, 2020.mp3"</a></p>
@@ -267,7 +267,7 @@ img {
 <p class="title"><a href="Improv 2020.01.31 2.mp3" target="_blank">"Improv January 31, 2020 #2.mp3"</a></p>
 <p class="title"><a href="Improv 2020.01.27.mp3" target="_blank">"Improv January 27, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.01.24.mp3" target="_blank">"Improv January 24, 2020.mp3"</a></p>
-<p class="title" title="January 24, 2020"><a href="Improv 2020.01.24 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #1.mp3"</a> (<a href="https://www.youtube.com/watch?v=Qr5YPpOV94M">▶️</a>)</p>
+<p class="title" title="January 24, 2020"><a href="Improv 2020.01.24 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #1.mp3"</a> (<a href="https://www.youtube.com/watch?v=Qr5YPpOV94M" target="_blank">▶️</a>)</p>
 <p class="title"><a href="Improv 2020.01.23 1.mp3" target="_blank">"Improv January 23, 2020 #1.mp3"</a></p>
 <p class="title"><a href="Improv 2020.01.23 2.mp3" target="_blank">"Improv January 23, 2020 #2.mp3"</a></p>
 <p class="title"><a href="Improv 2020.01.23 3.mp3" target="_blank">"Improv January 23, 2020 3.mp3"</a></p>
