--- a/songs/index.html
+++ b/songs/index.html
@@ -136,8 +136,71 @@ img {
 	
 <p class="header">–––– 2021 ––––</p>
 
-<p class="title" title="test test test">test test test</p>
-	
+<p class="title"><a href="Improv 2021.09.22.mp3" target="_blank">"Noise September 22, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.09.19.mp3" target="_blank">"Improv September 19, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.09.17.mp3" target="_blank">"Improv September 17, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.09.16.mp3" target="_blank">"Improv September 18, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.09.14.mp3" target="_blank">"Improv September 14, 2021.mp3"</a></p>
+<p class="title" title="September 13, 2021"><a href="Best part.mp3" target="_blank">"Best Part.mp3"</a> (Daniel Caesar & H.E.R.)</p>
+<p class="title"><a href="Improv 2021.09.13.mp3" target="_blank">"Improv September 13, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.09.05.mp3" target="_blank">"Improv September 5, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.09.03 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #7.mp3"</a></p>
+<p class="title"><a href="Improv 2021.09.03 noise.mp3" target="_blank">"Noise September 3, 2021.mp3"</a></p>
+<p class="title" title="September 2, 2021"><a href="Space Jam.mp3" target="_blank">"Space Jam.mp3"</a></p>
+<p class="title"><a href="Improv 2021.08.29.mp3" target="_blank">"Improv August 29, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.08.29 E.mp3" target="_blank">"Blues in E August 29, 2021.mp3"</a></p>
+<p class="title" title="August 29, 2021"><a href="Variation on a theme by TSwift.mp3" target="_blank">"Variation on a Theme by TSwift.mp3"</a> (<a href="https://youtu.be/-CmadmM5cOk?t=60" target="_blank">💋</a>)</p>
+<p class="title" title="August 28, 2021"><a href="Variation on a lovely theme 2.mp3" target="_blank">"Variation on a Lovely Theme #2.mp3"</a></p>
+<p class="title"><a href="Improv 2021.08.27.mp3" target="_blank">"Improv August 27, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.08.22.mp3" target="_blank">"Improv August 22, 2021 #1.mp3"</a></p>
+<p class="title"><a href="Improv 2021.08.22 2.mp3" target="_blank">"Improv August 22, 2021 #2.mp3"</a></p>
+<p class="title"><a href="Improv 2021.08.18 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #6.mp3"</a></p>
+<p class="title"><a href="Improv 2021.08.16 E.mp3" target="_blank">"Blues in E August 16, 2021.mp3"</a></p>
+<p class="title" title="August 14, 2021"><a href="Open letter.mp3" target="_blank">"Open Letter.mp3"</a></p>
+<p class="title"><a href="Improv 2021.08.10 E.mp3" target="_blank">"Blues in E August 10, 2021.mp3"</a></p>
+<p class="title" title="August 9, 2021"><a href="Come On In (Improv 2021.08.09).mp3" target="_blank">"Come On In.mp3"</a></p>
+<p class="title"><a href="Improv 2021.08.06.mp3" target="_blank">"Improv August 6, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.08.02.mp3" target="_blank">"Improv August 2, 2021.mp3"</a></p>
+<p class="title" title="July 31, 2021"><a href="Song for MM.mp3" target="_blank">"Song for MM.mp3"</a></p>
+<p class="title" title="July 20, 2021"><a href="Quixote in Desert III.mp3" target="_blank">"Quixote in Desert III.mp3"</a></p>
+<p class="title"><a href="Improv 2021.07.18.mp3" target="_blank">"Improv July 18, 2021 #1.mp3"</a></p>
+<p class="title"><a href="Improv 2021.07.18 2.mp3" target="_blank">"Improv July 18, 2021 #2.mp3"</a></p>
+<p class="title"><a href="Improv 2021.07.15 noise.mp3" target="_blank">"Noise July 15, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.07.13 E.mp3" target="_blank">"Blues in E July 13, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.07.11.mp3" target="_blank">"Improv July 11, 2021.mp3"</a></p>
+<p class="title" title="June 7, 2021"><a href="Eight Days a Week.mp3" target="_blank">"Eight Days a Week.mp3"</a> (The Beatles)</p>
+<p class="title"><a href="Improv 2021.07.05.mp3" target="_blank">"Improv July 5, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.07.02 E.mp3" target="_blank">"Blues in E July 2, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.07.02.mp3" target="_blank">"Improv July 2, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.06.28 E.mp3" target="_blank">"Blues in E June 28, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.06.24.mp3" target="_blank">"Improv June 24, 2021.mp3"</a></p>
+<p class="title" title="June 20, 2021"><a href="Vivaldi 3.mp3" target="_blank">"Song for Antonio Vivaldi #3 🍁.mp3"</a></p>
+<p class="title"><a href="Improv 2021.06.20.mp3" target="_blank">"Improv June 20, 2021 #1.mp3"</a></p>
+<p class="title"><a href="Improv 2021.06.20 2.mp3" target="_blank">"Improv June 20, 2021 #2.mp3"</a></p>
+<p class="title" title="June 15, 2021"><a href="Song for CP.mp3" target="_blank">"Song for CP.mp3"</a></p>
+<p class="title"><a href="Improv 2021.06.14.mp3" target="_blank">"Improv June 14, 2021.mp3"</a></p>
+<p class="title" title="June 7, 2021"><a href="Variation on a theme by Mayer.mp3" target="_blank">"Variation on a Theme by Mayer and Scofield of a Theme by Charles.mp3"</a> (<a href="https://www.youtube.com/watch?v=KlCWsh3Unl8" target="_blank">▶️</a>)</p>
+<p class="title"><a href="Improv 2021.06.07.mp3" target="_blank">"Improv June 7, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.06.03 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #5.mp3"</a></p>
+<p class="title" title="May 31, 2021"><a href="Grapevine.mp3" target="_blank">"👂➡️🍇🌿.mp3"</a> (🧔🏾)</p>
+<p class="title"><a href="Improv 2021.05.30.mp3" target="_blank">"Improv May 30, 2021 #1.mp3"</a></p>
+<p class="title"><a href="Improv 2021.05.30 2.mp3" target="_blank">"Improv May 30, 2021 #2.mp3"</a></p>
+<p class="title" title="May 26, 2021"><a href="🐝.mp3" target="_blank">"🐝.mp3"</a></p>
+<p class="title"><a href="Improv 2021.05.25.mp3" target="_blank">"Improv May 25, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.05.16 E.mp3" target="_blank">"Blues in E May 16, 2021.mp3"</a></p>
+<p class="title" title="May 12, 2021"><a href="Variation on a lovely theme 1.mp3" target="_blank">"Variation on a Lovely Theme #1.mp3"</a> (<a href="https://www.youtube.com/watch?v=7YGc6RMOYF8" target="_blank">▶️</a>)</p>
+<p class="title"><a href="Improv 2021.05.13.mp3" target="_blank">"Improv May 13, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.05.12.mp3" target="_blank">"Improv May 12, 2021 #1.mp3"</a></p>
+<p class="title"><a href="Improv 2021.05.12 2.mp3" target="_blank">"Improv May 12, 2021 #2.mp3"</a></p>
+<p class="title"><a href="Improv 2021.05.07.mp3" target="_blank">"Improv May 7, 2021.mp3"</a></p>
+<p class="title" title="May 6, 2021"><a href="Song for Vivaldi.mp3" target="_blank">"Song for Antonio Vivaldi #2 ☀️.mp3"</a></p>
+<p class="title"><a href="Improv 2021.05.01.mp3" target="_blank">"Improv May 1, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.04.26.mp3" target="_blank">"Improv April 26, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.04.25.mp3" target="_blank">"Improv April 25, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.04.22.mp3" target="_blank">"Improv April 22, 2021.mp3"</a></p>
+<p class="title" title="April 20, 2021 😏"><a href="Variation on a Theme by Jamiroquai.mp3" target="_blank">"Variation on a Theme by Jamiroquai.mp3"</a> (<a href="https://www.youtube.com/watch?v=XhUsiG65xxU" target="_blank">▶️</a>)</p>
+<p class="title"><a href="Improv 2021.04.17.mp3" target="_blank">"Improv April 17, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.04.14.mp3" target="_blank">"Improv April 14, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.30 🗣.mp3" target="_blank">"Improv March 30, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.27.mp3" target="_blank">"Improv March 27, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.25.mp3" target="_blank">"Improv March 25, 2021.mp3"</a></p>
@@ -146,10 +209,10 @@ img {
 <p class="title" title="March 17, 2021"><a href="Quixote in Desert II.mp3" target="_blank">"Quixote in Desert II.mp3"</a></p>
 <p class="title"><a href="Loop 2021.03.16.mp3" target="_blank">"Loop March 16, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.15.mp3" target="_blank">"Improv March 15, 2021.mp3"</a></p>
-<p class="title" title="March 13, 2021"><a href="Carolina 2021.03.13.mp3" target="_blank">"Variation on a Theme by JT.mp3"</a> (<a href="https://www.youtube.com/watch?v=67343pHUW5o" target="_blank">▶️</a>)</p>
+<p class="title" title="March 13, 2021"><a href="Carolina 2021.03.13.mp3" target="_blank">"Variation on a Theme by JT.mp3"</a> (<a href="https://www.youtube.com/watch?v=67343pHUW5o">▶️</a>)</p>
 <p class="title"><a href="Improv 2021.03.10.mp3" target="_blank">"Improv March 10, 2021 #1.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.10 2.mp3" target="_blank">"Improv March 10, 2021 #2.mp3"</a></p>
-​​<p class="title"><a href="Improv 2021.03.07.mp3" target="_blank">"Improv March 7, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.03.07.mp3" target="_blank">"Improv March 7, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.06.mp3" target="_blank">"Improv March 6, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.05 yeehaw.mp3" target="_blank">"Yeehaw March 5, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.03.04 😎.mp3" target="_blank">"Improv March 4, 2021 😎.mp3"</a></p>
@@ -159,13 +222,14 @@ img {
 <p class="title"><a href="Improv 2021.02.27.mp3" target="_blank">"Improv February 27, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.02.23.mp3" target="_blank">"Improv February 23, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.02.21.mp3" target="_blank">"Improv February 21, 2021.mp3"</a></p>
+<p class="title" title="February 8, 2021"><a href="variation all star 2.mp3" target="_blank">"Variation on a Theme by Smash Mouth #2.mp3"</a></p>
 <p class="title"><a href="Improv 2021.02.07 E.mp3" target="_blank">"Blues in E February 7, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.02.04.mp3" target="_blank">"Improv February 4, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.02.03.mp3" target="_blank">"Improv February 3, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.01.21.mp3" target="_blank">"Improv January 21, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.01.15.mp3" target="_blank">"Improv January 15, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.01.14.mp3" target="_blank">"Improv January 14, 2021.mp3"</a></p>
-<p class="title" title="January 7, 2021"><a href="Song for the United States of America.mp3" target="_blank">"Song for the United States of America.mp3"</a> (<a href="https://www.instagram.com/p/CJwiI3JMrTV/" target="_blank">📝
+<p class="title" title="January 7, 2021"><a href="Song for the United States of America.mp3" target="_blank">"Song for the United States of America.mp3"</a> (<a href="https://www.instagram.com/p/CJwiI3JMrTV/" target="_blank">🖼️
 </a>)</p>
 <p class="title"><a href="Improv 2021.01.08.mp3" target="_blank">"Improv January 5, 2021.mp3"</a></p>
 
@@ -184,7 +248,7 @@ img {
 <p class="title"><a href="Improv 2020.10.21.mp3" target="_blank">"Improv October 21, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.10.16.mp3" target="_blank">"Improv October 16, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.10.14.mp3" target="_blank">"Improv October 14, 2020.mp3"</a></p>
-<p class="title"><a href="Improv 2020.10.03 weberwav.mp3" target="_blank">"Improv , 2020.mp3"</a> (<a href="https://raw.githubusercontent.com/tomspage/tomspage.github.io/master/images/weberwav.jpg" target="_blank">🖼️</a>)</p>
+<p class="title"><a href="Improv 2020.10.03 weberwav.mp3" target="_blank">"Improv , 2020.mp3"</a> (<a href="https://raw.githubusercontent.com/tomspage/tomspage.github.io/master/images/weberwav.jpg">🖼️</a>)</p>
 <p class="title"><a href="Improv 2020.09.24.mp3" target="_blank">"Improv September 24, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.09.21.mp3" target="_blank">"Improv September 21, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.09.11.mp3" target="_blank">"Improv September 11, 2020.mp3"</a></p>
@@ -258,7 +322,7 @@ img {
 <p class="title"><a href="Grace 2020.02.15..mp3" target="_blank">"Grace February 15, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.02.15.mp3" target="_blank">"Improv February 15, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.02.12 E.mp3" target="_blank">"Blues in E February 2 , 2020.mp3"</a></p>
-<p class="title"><a href="​​Improv 2020.02.09 1.mp3" target="_blank">"Improv February 9, 2020 #1.mp3"</a></p>
+<p class="title"><a href="Improv 2020.02.09 1.mp3" target="_blank">"Improv February 9, 2020 #1.mp3"</a></p>
 <p class="title"><a href="Improv 2020.02.09 2.mp3" target="_blank">"Improv February 9, 2020 #2.mp3"</a></p>
 <p class="title"><a href="Improv 2020.02.06.mp3" target="_blank">"Improv February 6, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.02.03 2.mp3" target="_blank">"Improv February 3, 2020.mp3"</a></p>
@@ -267,7 +331,7 @@ img {
 <p class="title"><a href="Improv 2020.01.31 2.mp3" target="_blank">"Improv January 31, 2020 #2.mp3"</a></p>
 <p class="title"><a href="Improv 2020.01.27.mp3" target="_blank">"Improv January 27, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.01.24.mp3" target="_blank">"Improv January 24, 2020.mp3"</a></p>
-<p class="title" title="January 24, 2020"><a href="Improv 2020.01.24 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #1.mp3"</a> (<a href="https://www.youtube.com/watch?v=Qr5YPpOV94M" target="_blank">▶️</a>)</p>
+<p class="title" title="January 24, 2020"><a href="Improv 2020.01.24 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #1.mp3"</a> (<a href="https://www.youtube.com/watch?v=Qr5YPpOV94M">▶️</a>)</p>
 <p class="title"><a href="Improv 2020.01.23 1.mp3" target="_blank">"Improv January 23, 2020 #1.mp3"</a></p>
 <p class="title"><a href="Improv 2020.01.23 2.mp3" target="_blank">"Improv January 23, 2020 #2.mp3"</a></p>
 <p class="title"><a href="Improv 2020.01.23 3.mp3" target="_blank">"Improv January 23, 2020 3.mp3"</a></p>
@@ -362,7 +426,9 @@ img {
 
 <p class="title" title="November 23, 2018"><a href="Rach 3.mp3" target="_blank">"Variation on a Theme by Rachmaninoff.mp3"</a> (<a href="https://www.youtube.com/watch?v=UKziGGumuEk" target="_blank">▶️</a>)</p>
 <p class="title" title="June 15, 2018"><a href="fire and ice.mp3" target="_blank">"Fire & Ice.mp3"</a></p>
+<p class="title" title="June 9, 2018"><a href="Short Song for Donald Trump.mp3" target="_blank">"Short Song for Donald Trump.mp3"</a></p>
 <p class="title"><a href="Improv 2018.05.08.mp3" target="_blank">"Improv May 8, 2018.mp3"</a></p>
+
 
 
 
